// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip Hoverable Tooltip Handles multiple tooltips properly 1`] = `
<body>
  <div>
    <div>
      Hover on
       
      <strong
        data-testid="hoverable-1"
        data-tooltip="Tooltip 1"
      >
        me
      </strong>
      , or
       
      <strong
        data-testid="hoverable-2"
        data-tooltip="Tooltip 2"
      >
        me
      </strong>
    </div>
  </div>
  <div>
    <div
      class="fade show"
    >
      <div
        class="tooltip show tooltip show tooltipAuto bs-tooltip-auto"
        style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
      >
        <div
          class="tooltip-inner tooltipInner"
          role="tooltip"
        >
          Tooltip 2
        </div>
        <span
          class="arrow arrow"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`Tooltip Hoverable Tooltip Shows tooltip properly on hover 1`] = `
<body>
  <div>
    <div>
      Hover on
       
      <strong
        data-testid="hoverable-1"
        data-tooltip="Tooltip 1"
      >
        me
      </strong>
      , or
       
      <strong
        data-testid="hoverable-2"
        data-tooltip="Tooltip 2"
      >
        me
      </strong>
    </div>
  </div>
  <div>
    <div
      class="fade show"
    >
      <div
        class="tooltip show tooltip show tooltipAuto bs-tooltip-auto"
        style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
      >
        <div
          class="tooltip-inner tooltipInner"
          role="tooltip"
        >
          Tooltip 1
        </div>
        <span
          class="arrow arrow"
        />
      </div>
    </div>
  </div>
</body>
`;
